Fix entry footer overlap issue

--- a/css/src/_post.scss
+++ b/css/src/_post.scss
@@ -29,3 +29,7 @@
 		margin-top: -39px;
 	}
 }
+
+.entry-footer {
+	clear: both;
+}
